--- a/index.html
+++ b/index.html
@@ -4,10 +4,63 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ToDo List</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div class="modal fade" id="task-modal" tabindex="-1" aria-labelledby="taskModal" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title" id="taskModal">Nova Tarefa</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="mb-3">
+                            <label for="input-title" class="col-form-label">Titulo</label>
+                            <input type="text" class="form-control" id="input-title" autocomplete="off" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="input-category" class="col-form-label">Categoria</label>
+                            <input type="text" class="form-control" id="input-category" list="categories-suggestions" autocomplete="off" required>
+                            <datalist id="categories-suggestions">
+                            </datalist>
+                        </div>
+                        <div class="mb-3">
+                            <label for="input-hour" class="col-form-label">Hora</label>
+                            <input type="time" class="form-control" id="input-hour" required>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-dark" id="btn-save">Salvar</button>
+                    <button type="button" class="btn btn-outline-dark" data-bs-dismiss="modal">Cancelar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="d-flex flex-row align-items-center justify-content-between mb-3 mt-3">
+            <div class="text-white">
+                <h1 class="m-0">Meu dia</h1>
+                <h2 class="d-block m-0" id="hour">00:00</h2>
+                <span class="d-block m-0" id="date">Quarta-feira, 02 de novembro</span>
+            </div>
+            <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#task-modal"
+                data-bs-action="add">
+                <i class="bi bi-plus-lg fs-1 text-white"></i>
+            </button>
+        </div>
+        <ul class="list-group" id="list-tasks">
+            <div class="alert alert-dark text-center" role="alert">
+                Ainda não há tarefas para este dia
+            </div>
+        </ul>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script src="./script.js"></script>
 </body>
 </html>
