--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo List</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <div class="modal fade" id="task-modal" tabindex="-1" aria-labelledby="taskModal" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
@@ -25,8 +28,14 @@
                         </div>
                         <div class="mb-3">
                             <label for="input-category" class="col-form-label">Categoria</label>
-                            <input type="text" class="form-control" id="input-category" list="categories-suggestions" autocomplete="off" required>
+                            <input type="text" class="form-control" id="input-category" list="categories-suggestions"
+                                autocomplete="off" required>
                             <datalist id="categories-suggestions">
+                                <option value="Cozinha">
+                                <option value="Pessoal">
+                                <option value="Família">
+                                <option value="Trabalho">
+                                <option value="Esportes">
                             </datalist>
                         </div>
                         <div class="mb-3">
@@ -60,7 +69,10 @@
             </div>
         </ul>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
     <script src="./script.js"></script>
 </body>
+
 </html>
