--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                                 <option value="Família">
                                 <option value="Trabalho">
                                 <option value="Esportes">
+                                <option value="Estudo">
                             </datalist>
                         </div>
                         <div class="mb-3">
